--- a/public/package.json
+++ b/public/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "buffer": "^6.0.3",
+    "emoji-picker-react": "^4.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.11",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
