--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URL="mongodb://127.0.0.1:27017/chat"
+MONGO_URL="mongodb+srv://snaptalk:12345@cluster0.ldphrt7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
